--- a/activities.html
+++ b/activities.html
@@ -29,9 +29,9 @@
     <nav
         class=" fixed top-0 z-40 w-full backdrop-blur  lg:z-50 lg:border-b lg:border-t-black/10 dark:border-t-black/[0.06] bg-white/75 supports-backdrop-blur:bg-white/95 dark:bg-t-black/75">
         <div class="container  flex flex-wrap justify-between items-center mx-auto">
-            <a href="/" class="flex ">
-                <img class="dark:hidden max-w-full w-32" src="images/logo.png" alt="logo">
-                <img class="dark:inline-block hidden max-w-full w-32" src="images/logo_darkmode.png" alt="logo">
+            <a href="#" class="flex ">
+                <img class="dark:hidden max-w-full w-[4.5rem] py-1" src="images/Faraz_Khan_logo.png" alt="logo">
+                <img class="dark:inline-block hidden max-w-full w-[4.5rem] py-1" src="images/Faraz_Khan_logo.png" alt="logo">
 
             </a>
 
