--- a/index.html
+++ b/index.html
@@ -610,14 +610,14 @@
             <div class="container">
 
                 <div class="p-4 w-full  bg-white/75 dark:bg-gray-800/50  rounded-lg  shadow-lg sm:p-6 ">
-                    <p class="dark:text-white"><span class="font-bold">"RTSMM: A Robust Tree-based Stacking Machine Learning Model for the Prediction of Obesity in Adulthood"</span>,
-                        Dr. Mohammad Mohiuddin Azad, <span class="font-bold">Md. Faraz Kabir Khan</span>, Dr. Sameh Abd El-Ghany (Ongoing)</p>
+                    <p class="dark:text-white"><span class="font-bold">"XAI-Enhanced Machine Learning for Obesity Risk Classification: A Stacking Approach With LIME Explanations"</span>,
+                        Dr. Mohammad Mohiuddin Azad, <span class="font-bold">Md. Faraz Kabir Khan</span>, Dr. Sameh Abd El-Ghany (Ongoing), In IEEE Access, vol. 13, pp. 13847-13865, 2025, doi: 10.1109/ACCESS.2025.3530840</p>
 
-                        <!-- <div class="pb-4 mt-3">
+                         <div class="pb-4 mt-3">
                             <a class="  bg-t-black rounded-lg py-1 px-2 text-white hover:filter hover:brightness-150 transition duration-500"
-                                href="https://ieeexplore.ieee.org/document/10017541" target="_blank">View </a>
+                                href="https://ieeexplore.ieee.org/abstract/document/10843688" target="_blank">View </a>
                        
-                        </div> -->
+                        </div> 
 
 
                 </div>
